--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# Server
+server.servlet.context-path=/fota
 
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:~/fota
+spring.datasource.username=vw
+spring.datasource.password=vw
+spring.datasource.driver-class-name=org.h2.Driver
