Implementing own H2 dialect do fix error when starting up application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.url=jdbc:h2:file:~/fota
 spring.datasource.username=vw
 spring.datasource.password=vw
 spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.properties.hibernate.dialect=com.man.fota.config.MyH2Dialect
