Implementing Batch Service

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ build/
 
 ### VS Code ###
 .vscode/
+done/hard_001.csv
+done/soft_003.csv
+done/soft_002.csv
+done/soft_001.csv
+done/hard_003.csv
+done/hard_002.csv
