--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,9 @@ spring.datasource.url=jdbc:h2:file:~/fota
 spring.datasource.username=vw
 spring.datasource.password=vw
 spring.datasource.driver-class-name=org.h2.Driver
+
+# Hibernate
 spring.jpa.properties.hibernate.dialect=com.man.fota.config.MyH2Dialect
+
+# Batch
+spring.batch.job.enabled=false
