--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+			        <mainClass>com.man.fota.FotaApplication</mainClass>
+			    </configuration>
 			</plugin>
 		</plugins>
 	</build>
